2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b4

 * Delete: Unused and now outdated template/skin files from Jade.

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b3

 * New: Skin 'danmaher'

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b2

 * CHANGE: Add a new <div> "headerbox" in every .header file.
           Ths makes it easier to block a header, but you now must set
           a header box end!

 * CHANGE: Languageselector!

 * Change: Minor code cleanups.

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b1

 * Change: Some icon changed.

 * Fix: Translation domain in platform functions,
         lib/stats, lib/groups


 * Update: Walter Zorns tooltip JS.

 * Fix: Voting in thumbsview broken.
   Thanks to adegutis from forums.

2008-09-16 Chris Kelly <ckdake@ckdake.com> 1.6-RC2

 * Release: 1.6-RC2

2008-09-16 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b25

 * SECURITY FIX: Arbitrary file disclosure

   A user having permissions to add photos to Gallery can retrieve arbitrary
   file (accessible to webserver) from the file system.
   The problem is caused by incorrect treatment of zipped symlinks.

   The Gallery team wants to thank Alex Ustinov for gently reporting this.


 * Security Fix: Insecure cookies over HTTPS

   When running gallery on https, it does not set cookies to be secure,
   making it possible to sniff the session cookie.

   The Gallery team wants to thank Hanno Boeck for reporting this.

2008-09-14 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b24

 * Fix: Add photos from mainpage is new, but was not working ;-)
        Added missing javascript.

2008-09-14 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b23

 * Fix: Better handling the case when an invalid, or broken image
        was uploaded.

 * CHANGE: Album::getPerm now returns true anytime for admins.
           This is better then adding a check to every single permission
           check like introduced in 1.5.9-svn-b4

 * Change: * Also special users like nobody, everbody or loggedIn